--- a/src/Mint-Y/cinnamon/sass/_colors.scss
+++ b/src/Mint-Y/cinnamon/sass/_colors.scss
@@ -10,6 +10,8 @@ $text_color: if($variant == 'light', #202020, #D3D3D3);
 $bg_color: if($variant == 'light', mix($selected_bg_color, #f5f5f5, 2%), mix($selected_bg_color, #2f2f2f, 1.5%));
 $fg_color: if($variant =='light', transparentize(black, 0.13), transparentize(white, 0.13));
 
+$color1: rgba(55, 65, 85, 0.85);
+
 $selected_fg_color: #ffffff;
 
 $borders_color: if($variant =='light', darken($bg_color, 20%), darken($bg_color, 6%));
@@ -40,7 +42,7 @@ $osd_entry_border: transparentize(darken($osd_bg_color, 12%), 0.6);
 
 $osd_insensitive_fg_color: mix($osd_fg_color, opacify($osd_bg_color, 1), 30%);
 
-$panel_bg: $bg_color;
+$panel_bg: #00000000;
 $panel_fg: $fg_color;
 
 $entry_bg: if($variant=='light', $base_color, lighten($base_color, 0%));
