--- a/src/Mint-Y/cinnamon/sass/_common.scss
+++ b/src/Mint-Y/cinnamon/sass/_common.scss
@@ -267,23 +267,23 @@ StScrollBar {
 .menu {
   color: $fg_color;
   border: 1px solid $borders_color;
-  border-radius: 3px;
-	background-color: transparentize($bg_color, 0.01);
+  border-radius: 6px;
+	background-color: $color1;
 
   &.top {
-    border-radius: 0 0 3px 3px;
+    border-radius: 0 0 6px 6px;
   }
 
   &.bottom {
-    border-radius: 3px 3px 0 0;
+    border-radius: 6px 6px 0 0;
   }
 
   &.left {
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 6px 6px 0;
   }
 
   &.right {
-    border-radius: 3px 0 0 3px;
+    border-radius: 6px 0 0 6px;
   }
 }
 
@@ -431,6 +431,8 @@ StScrollBar {
   height: 40px;
   /* sets the width of vertical panels */
   width: 32px;
+  /* panel text-shadow */
+  text-shadow: 1px 1px 3px black;
   /* Set the symbolic foreground color for icons, and importantly, the system tray applet icons */
   color: $fg_color;
 
@@ -1048,7 +1050,7 @@ StScrollBar {
 #notification {
   border: 1px solid $borders_color;
   border-radius: 3px;
-  background-color: $bg_color;
+  background-color: $color1;
   padding: 13px;
   spacing-rows: 10px;
   spacing-columns: 10px;
@@ -1414,7 +1416,7 @@ StScrollBar {
   &-favorites-box {
     padding: 10px;
     transition-duration: 300;
-    background-color: $base_color;
+    background-color: $color1;
     border: 1px solid $borders_color;
   }
 
@@ -1538,7 +1540,7 @@ StScrollBar {
   color: $fg_color;
   border: 1px solid $borders_color;
   border-radius: 5px;
-  background-color: $bg_color;
+  background-color: $color1;
 }
 
 .restart-osd {
@@ -1951,8 +1953,6 @@ StScrollBar {
 }
 
 .workspace-button {
-  border: 1px solid transparentize(black, 0.6);
-  background-color: transparentize(black, 0.8);
   width: 20px;
   height: 14px;
   color: transparentize($selected_fg_color, 0.55);
@@ -1969,7 +1969,6 @@ StScrollBar {
   }
 
   &:outlined {
-    background-color: $selected_bg_color;
     color: $selected_fg_color;
 
     &:hover {
